--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Create your little piece of literature</h1>
-<%= simple_form_for @article do |f| %>
+<%= simple_form_for @article, url: :articles, method: :post do |f| %>
   <%= f.input :title %>
   <%= f.input :content %>
   <%= f.button :submit %>
