--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -4,3 +4,4 @@
   <%= f.input :content, placeholder: @article.content %>
   <%= f.button :submit %>
 <% end %>
+<%= link_to 'Back', article_path(@article) %>
