--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Interesting Articles</h1>
 <% @articles.each do |article| %>
-<%= article.title %>
+<%= link_to article.title, article_path(article) %>
 <% end %>
+<%= link_to 'Create a new article', new_article_path %>
