--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,11 @@
 <h1>Interesting Articles</h1>
-<% @articles.each do |article| %>
-<%= link_to article.title, article_path(article) %>
+<div class='grid-container'>
+<% @articles.each_slice(3) do |three_articles| %>
+  <% three_articles.each_with_index do |article, index| %>
+    <div class="grid-<%= index + 1%>">
+      <%= link_to article.title, article_path(article) %>
+    </div>
+  <% end %>
 <% end %>
+</div>
 <%= link_to 'Create a new article', new_article_path %>
