--- a/app/assets/stylesheets/components/_grid.scss
+++ b/app/assets/stylesheets/components/_grid.scss
@@ -41,8 +41,7 @@
       0% calc(100% - var(--notchSize))
     );
 
-  p {
-    text-decoration: none;
+  a {
     color: white;
     font-family: 'Poppins';
     font-weight: 300;
@@ -74,8 +73,7 @@
       0% calc(100% - var(--notchSize))
     );
 
-  p {
-    text-decoration: none;
+  a {
     color: white;
     font-family: 'Poppins';
     font-weight: 300;
@@ -107,7 +105,7 @@
       0% calc(100% - var(--notchSize))
     );
 
-  p {
+  a {
     text-decoration: none;
     color: white;
     font-family: 'Poppins';
