--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
       <% three_articles.each_with_index do |article, index| %>
         <%= link_to article_path(article) do %>
             <div class="grid-<%= index + 1%>">
-              <p><%= article.title %></p>
+              <a> <%= link_to article.title, article_path(article) %> </a>
             </div>
         <% end %>
       <% end %>
